# TargetFormer-Crime

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml  full.yaml  smoke.yaml
reports/: analysis.md  experiments.md  full_run.md  idea.md  plan.md  smoke_test.md
scripts/: run.py
src/targetformer_crime/: cli.py  config.py
src/targetformer_crime/data/: __init__.py  feature_cache.py  ucf_crime.py
src/targetformer_crime/losses/: mil.py
src/targetformer_crime/metrics/: classification.py
src/targetformer_crime/models/: baselines.py  targetformer.py
src/targetformer_crime/pipeline/: audit.py  eval.py  paper.py  preprocess.py  smoke.py  train.py  viz.py
src/targetformer_crime/preprocess/: global_tokens.py  yolo_tokens.py
src/targetformer_crime/utils/: __init__.py  misc.py  serialization.py
src/targetformer_crime/viz/: dataset_audit.py
src/targetformer_crime/workflows/: evaluation.py  experiments.py  registry.py  training.py  visualize.py
tests/: test_mil_loss.py
